Changes in primecount-8.3, 2026-02-24

* fast_div.hpp: Improve x64 assembly.

Changes in primecount-8.2, 2026-02-01

* Fix missing version in .pc file #104.
* AC.cpp: Improve loop condition.

Changes in primecount-8.1, 2026-01-26

* CMakeLists.txt: Fix CMAKE_PROJECT_VERSION not defined.
* AC.cpp: Up to 15% faster due to improved instruction level parallelism.
* S2_easy.cpp: Fix "#pragma omp master" deprecated in OpenMP 5.1. 
* Sieve_count*.hpp: Improve GCC conditional move code gen.
* Automated building Windows binaries using GitHub Actions CI.

Changes in primecount-8.0, 2025-12-13

# BREAKING C/C++ API CHANGES:

* primecount.hpp (C++ API): Remove std::string functions:
    std::string pi(std::string x);
    std::string get_max_x();

* primecount.h (C API): Remove string functions:
    const char* primecount_pi_str(x);
    const char* primecount_get_max_x();

We have a new 128-bit API without string arguments and with
better performance and improved error handling:

## 128-bit C++ API:
pc_int128_t pi(pc_int128_t x);
pc_int128_t nth_prime(pc_int128_t n);

## 128-bit C API:
pc_int128_t primecount_pi_128(pc_int128_t x);
pc_int128_t primecount_nth_prime_128(pc_int128_t n);


# OTHER NON-BREAKING CHANGES:

* api.cpp: Fix broken 128-bit nth prime function.
* util.cpp: Fix undefined behavior in to_string().
* calculator.hpp: Add code to detect integer overflows.
* LoadBalancerP2.cpp: Faster critical section.
* LoadBalancerS2.cpp: Faster critical section.
* LoadBalancerAC.cpp: Faster critical section.
* nth_prime.cpp: Improve status output.
* AC.cpp: Improved instruction level parallelism.
* AC_libdivide.cpp: Improved instruction level parallelism.
* D.cpp: Refactor runtime dispatch to optimized SIMD algorithm.
* S2_hard.cpp: Refactor runtime dispatch to optimized SIMD algorithm.
* pi_lmo_parallel.cpp: Add support for runtime dispatch to optimized SIMD algorithm.
* Move S2_easy_libdivide.cpp code into S2_easy.cpp.
* Move AC_libdivide.cpp code into AC.cpp.