@@ -147,7 +147,6 @@ option(BUILD_TESTS         "Build the test programs"               OFF)
 option(WITH_LIBDIVIDE       "Use libdivide.h"                      ON)
 option(WITH_OPENMP          "Enable OpenMP multi-threading"        ON)
 option(WITH_MULTIARCH       "Enable runtime dispatching to fastest supported CPU instruction set" ON)
-option(WITH_DIV32           "Use 32-bit division instead of 64-bit division whenever possible" ON)
 option(WITH_MSVC_CRT_STATIC "Link primecount.lib with /MT instead of the default /MD" OFF)
 option(WITH_FLOAT128        "Use __float128 (requires libquadmath), increases precision of Li(x) & RiemannR" OFF)
 ```
